# agent-did

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json
contracts/: README.md  audit-triage-rules.json  hardhat.config.js  package-lock.json  package.json
docs/: Architecture-and-SDK-Design.md  Complete-Agent-DID-SDK-Course-EN.md  Complete-Agent-DID-SDK-Course-ES.md  F1-03-LangChain-Integration-Parity-Review-Checklist.md  F1-03-LangChain-TS-Python-Integration-Parity-Matrix.md  F1-03-LangChain-didwba-Demo-Walkthrough.md  F2-01-Python-SDK-Blueprint.md  F2-04-Microsoft-Agent-Framework-Implementation-Checklist.md  F2-04-Microsoft-Agent-Framework-Integration-Review-Checklist.md  F2-04-Microsoft-Agent-Framework-Maturity-Gap-Assessment.md  F2-04-Microsoft-Agent-Framework-Parity-Matrix.md  F2-04-Semantic-Kernel-Implementation-Checklist.md  F2-04-Semantic-Kernel-Integration-Design.md  F2-04-Semantic-Kernel-Integration-Review-Checklist.md  F2-04-Semantic-Kernel-Maturity-Gap-Assessment.md  F2-04-Semantic-Kernel-Parity-Matrix.md  F2-05-CrewAI-Implementation-Checklist.md  F2-05-CrewAI-Integration-Design.md  F2-05-CrewAI-Integration-Review-Checklist.md  F2-05-CrewAI-Maturity-Gap-Assessment.md  PHILOSOPHY.md  RFC-001-2h-Practical-Course.md  RFC-001-Agent-DID-Specification.md  RFC-001-Compliance-Checklist.md  RFC-001-Implementation-Backlog.md  RFC-001-Resolver-HA-Runbook.md  RFC-001-Training-Manual.md  SDK-Release-Checklist.md  Strategic-Assessment-Agent-DID-EN.md  Strategic-Assessment-Agent-DID-ES.md
integrations/semantic-kernel/: README.md  pyproject.toml
integrations/semantic-kernel/examples/: agent_did_semantic_kernel_composed_observability_example.py  agent_did_semantic_kernel_production_recipe_example.py
integrations/semantic-kernel/src/agent_did_semantic_kernel/: __init__.py  observability.py
integrations/semantic-kernel/tests/: test_observability.py  test_runtime_smoke.py
scripts/: e2e-smoke.js  (+8 more)
(+102 files in other folders)
